--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                     </p>
                                     <img src="./assets/certificate/web responsive certificate.PNG"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
                                 </div>
                             </div>
                             <div class="edu-card card">
@@ -256,7 +256,7 @@
                                     </p>
                                     <img src="./assets/certificate/web responsive certificate.PNG"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
                                 </div>
                             </div>
                             <div class="edu-card card">
@@ -271,7 +271,7 @@
                                     </p>
                                     <img src="./assets/certificate/roothub-certificate.jpg"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
                                 </div>
                             </div>
                             <div class="edu-card card">
@@ -286,7 +286,7 @@
                                     </p>
                                     <img src="./assets/certificate/web responsive certificate.PNG"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
                                 </div>
                             </div>
                             <div class="edu-card card">
@@ -301,7 +301,7 @@
                                     </p>
                                     <img src="./assets/certificate/web responsive certificate.PNG"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
                                 </div>
                             </div>
                         </div>
@@ -332,7 +332,7 @@
                                 <div class="h-100">
                                     <img src="./images/hotel-booking.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
-                                        <h3 class="card-title p-1">Hotel Booking</h3>
+                                        <h3 class="card-title">Hotel Booking</h3>
                                         <!-- <p class="card-text">
                                             I created a hotel booking app using just html and css.
                                         </p> -->
@@ -344,7 +344,7 @@
                                 <div class="">
                                     <img src="./images/budget-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
-                                        <h3 class="card-title p-1">Budget App</h3>
+                                        <h3 class="card-title">Budget App</h3>
                                         <!-- <p class="card-text">
                                             I created a shopping list budget app using html, css and js.
                                         </p> -->
@@ -394,7 +394,7 @@
                 <div class="contact-info ">
                     <div class="grid contact-info-grid">
                         <div class="contact-info">
-                            <img src="./images/about-me.jpg" class="w-100" alt="">
+                            <img src="./images/about-me.jpg" class="w-100 h-100" alt="">
                             <!-- <div class="contact-grid text-center">
                                 <div class="card">
                                     <div class="card-body">
