--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <ul class="navigation-list">
                             <li class="navigation__item">
                                 <!-- <a href="#" class="navigation__link">About Natours</a> -->
-                                <a class="nav-link home-page active" href="index.html">Home</a>
+                                <a class="nav-link home-page active" href="#home-page">Home</a>
                             </li>
                             <li class="navigation__item">
                                 <!-- <a href="#" class="navigation__link">Your benefit</a> -->
@@ -64,7 +64,7 @@
                 </div>
                 <div class="ml-auto mobile-none desktop-nav" id="">
                     <div class="navbar-nav">
-                        <a class="nav-link home-page active" href="index.html">Home</a>
+                        <a class="nav-link home-page active" href="#home-page">Home</a>
                         <a class="nav-link about-page" href="#about-page">About Me</a>
                         <a class="nav-link skills-page" href="#skills-page">Skills</a>
                         <a class="nav-link project-page" href="#project-page">My projects</a>
@@ -86,15 +86,6 @@
             </nav>
         </div>
     </header>
-    <!-- <div class="mobile-nav py-5">
-        <div class="px-3 d-flex flex-column">
-            <a class="mobile-nav-link active" href="index.html">Home</span></a>
-            <a class="mobile-nav-link " href="#about-page">About Me</a>
-            <a class="mobile-nav-link " href="#skills-page">Skills</a>
-            <a class="mobile-nav-link " href="#project-page">My projects</a>
-            <a class="mobile-nav-link " href="#contact-page">Contact Me</a>
-        </div>
-    </div> -->
     <main>
         <section class="home-page" id="home-page">
             <div class="container h-100">
