--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     </p>
                                     <img src="./assets/certificate/web responsive certificate.PNG"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link" disabled>View Certificate</button>
                                 </div>
                             </div>
                             <div class="edu-card card">
@@ -292,7 +292,7 @@
                                     </p>
                                     <img src="./assets/certificate/web responsive certificate.PNG"
                                         class="w-100 certificate-img-tag" alt="web responsive certificate">
-                                    <button type="button" class="certificate-btn blue-link">View Certificate</button>
+                                    <button type="button" class="certificate-btn blue-link" disabled>View Certificate</button>
                                 </div>
                             </div>
                         </div>
@@ -313,9 +313,9 @@
                             <div class="project-grid-card">
                                 <div>
                                     <small class="section-intro">MY PROJECTS</small>
-                                    <!-- <h2 class="headings">
+                                    <h2 class="headings">
                                         Completed Projects
-                                    </h2> -->
+                                    </h2>
                                     <p>Here are a few of my completed projects</p>
                                 </div>
                             </div>
@@ -371,7 +371,7 @@
                             <div class="project-grid-card">
                                 <div class="">
                                     <div class=" text-center">
-                                        <a href="" class="mx-auto">Check out my Github profile</a>
+                                        <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="mx-auto blue-link">Check out my Github profile</a>
                                     </div>
                                 </div>
                             </div>
@@ -445,7 +445,7 @@
                 <div class="contact-info ">
                     <div class="flex connect-info-contain">
                         <div class="my">
-                            <h1>Feel Free To Connect With Me</h1>
+                            <h1>Connect With Me Via</h1>
                         </div>
                         <div class="social-media-icons my">
                             <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer"
