--- a/index.html
+++ b/index.html
@@ -412,26 +412,37 @@
                         </div>
                         <div class="">
                             <h1>Contact Me</h1>
-                            <p>Have an idea you want to bring to life?</p>
-                            <p>Or you want to say hi?</p>
-                            <p>Why not send me a message?</p>
+                            <div class="my">                                 
+                                <p>Have an idea you want to bring to life?</p>
+                                <p>Or you want to say hi?</p>
+                                <p>Why not send me a message?</p>
+                            </div>
                             <form action="post" class="text-center">
-                                <label for="name" class="w-100">
-                                    <input type="text" class="py-1 px-2 w-100" name="name" id="name" placeholder="Name">
-                                </label>
-                                <label for="email" class="w-100">
-                                    <input type="email" class="py-1 px-2 w-100" name="email" id="email"
-                                        placeholder="E-Mail">
-                                </label>
-                                <label for="subject" class="w-100">
-                                    <input type="text" class="py-1 px-2 w-100" name="subject" id="subject"
-                                        placeholder="Subject">
-                                </label>
-                                <label for="message" class="w-100">
-                                    <textarea rows="5" class="w-100 py-1 px-2 w-100" name="message" id="message"
-                                        placeholder="Message"></textarea>
-                                </label>
-                                <label for="submit" class="py-2">
+                                <div class="input-wrap">
+                                    <label class="input-label" for="name" class="w-100">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                    </label>
+                                    <input type="text" class="w-100" name="name" id="name" placeholder="Name">
+                                </div>
+                                <div class="input-wrap">
+                                    <label class="input-label" for="email" class="w-100">
+                                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    </label>
+                                    <input type="email" class="w-100" name="email" id="email" placeholder="E-Mail">
+                                </div>
+                                <div class="input-wrap">
+                                    <label class="input-label" for="subject" class="w-100">
+                                            <i class="fa fa-question-circle" aria-hidden="true"></i>
+                                    </label>
+                                    <input type="text" class="w-100" name="subject" id="subject" placeholder="Subject">
+                                </div>
+                                <div class="input-wrap">
+                                    <label class="input-label" for="message" class="w-100">
+                                            <i class="fa fa-comment" aria-hidden="true"></i>
+                                    </label>
+                                    <textarea rows="5" class="w-100" name="message" id="message" placeholder="Message"></textarea>
+                                </div>
+                                <label for="submit" class="">
                                     <button type="submit" class="button btn">SEND MESSAGE</button>
                                 </label>
                             </form>
@@ -472,7 +483,7 @@
                         <p>
                             Or you can Call:
                             <a href="tel:+23470870050">+23470870050</a>
-                            Or Send a mail:
+                            Or Send a mail to:
                             <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
                         </p>
                     </div>
@@ -483,25 +494,14 @@
     <footer class=" py-4">
         <div class="container">
             <div class="flex footer-div">
-                <!-- <div class="">
-                    <div class="">
-                        <p>
-                            Call:
-                            <a href="tel:+23470870050">+23470870050</a>
-                        </p>
-                    </div>
-                    <div class="">
-                        <p>
-                            Send a mail:
-                            <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
-                        </p>
-                    </div>
-                </div> -->
                 <div class="attribution">
+                    Icons from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
+                </div>
+                <!-- <div class="attribution">
                     Icons made by
                     <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from
                     <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-                </div>
+                </div> -->
                 <!-- https://www.flaticon.com/search?word=team&author_id=190 -->
                 <p class="text-center">
                     &#169; <a class="brand" href="index.html">Veedah</a> || 2020
