--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 </head>
 
 <body>
+    <div class="loader flex">
+    <div class="loadingio-spinner-ripple-0r1rujj3n6i"><div class="ldio-2skp4pzb2x5">
+        <div></div><div></div>
+        </div>
+    </div>
+</div>
+    <div class="contain-all">
     <header class="header w-100">
         <div class="">
             <nav class="flex w-100">
-                <a class="brand" href="index.html">Veedah</a>
+                <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a>
                 <div class="navigation">
                     <input type="checkbox" name="" class="navigation-checkbox" id="nav-toggle">
                     <label for="nav-toggle" class="navigation-btn">
@@ -126,16 +133,23 @@
                                     More about me
                                 </h2>
                                 <p class="card-text">
-                                    I am an undergraduate student of Computer Engineering at the University of Uyo.
-                                    I am currently in my third year. I started coding 6 months ago.
+                                    My name is Victoria David Akpan. I am an indigene of Akwa Ibom State.
+                                    I am a front-end web developer who replicates designs using 
+                                    the appropriate front-end techniques.
+                                    <!-- I am an undergraduate student of Computer Engineering at the University of Uyo.
+                                    I am currently in my third year. I started coding 6 months ago. -->
                                 </p>
                                 <p class="card-text">
-                                    While not creating websites, I enjoy watching movies, playing
-                                    games, reading good books and also spending time with friends.
+                                    Currently, I am studying Computer 
+                                    Engineering at the University of Uyo, Nigeria. 
+                                    I love solving problems and learning new things.
                                 </p>
                                 <p class="card-text">
-                                    Whenever I am stressed out, I spend my time cooking,
-                                    baking, eating and painting my nails to relieve the stress.
+                                    While not coding or learning, I enjoy watching movies, playing
+                                    games, reading good books, experimenting with baking ingredients, 
+                                    and also spending time with friends and family.
+                                    <!-- Whenever I am stressed out, I spend my time cooking,
+                                    baking, eating and painting my nails to relieve the stress. -->
                                 </p>
                             </div>
                         </div>
@@ -172,7 +186,7 @@
                     <div class="col-md-6">
                         <div>
                             <h2 class="headings">
-                                Skill set
+                                Technologies
                             </h2>
                         </div>
                         <div class="grid skill-grid">
@@ -323,11 +337,16 @@
                                 <div class="h-100">
                                     <img src="./images/hotel-booking.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
-                                        <h3 class="card-title">Hotel Booking</h3>
+                                        <h3 class="card-title">Hotel Booking Site</h3>
                                         <!-- <p class="card-text">
                                             I created a hotel booking app using just html and css.
                                         </p> -->
-                                        <a href="https://best-tour-site.netlify.app/" class="btn">Live Demo</a>
+                                        <a href="https://best-tour-site.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Live Demo
+                                        </a>
+                                        <a href="https://github.com/veedahv/hotel-booking-bootstrap" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Repo Link
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -335,24 +354,34 @@
                                 <div class="">
                                     <img src="./images/budget-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
-                                        <h3 class="card-title">Budget App</h3>
+                                        <h3 class="card-title">Shopping List App</h3>
                                         <!-- <p class="card-text">
                                             I created a shopping list budget app using html, css and js.
                                         </p> -->
-                                        <a href="https://shopping-list-budget.netlify.app/" class="btn">Live Demo</a>
+                                        <a href="https://shopping-list-budget.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Live Demo
+                                        </a>
+                                        <a href="https://github.com/veedahv/shopping-list" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Repo Link
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="project-grid-card project-card">
                                 <div class="h-100">
-                                    <img src="./images/weather-app.jpg" class="h-100 w-100" alt="...">
+                                    <img src="./images/veeshop-dashboard.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
-                                        <h3 class="card-title p-1">Dashboard</h3>
+                                        <h3 class="card-title p-1">Ecommerce Dashboard</h3>
                                         <!-- <p class="card-text">
                                             I implemented a dashboard using html, css, bootstrap and js.
                                             In this project, I made us of local stoeage to store variables.
                                         </p> -->
-                                        <a href="https://vee-ecommerce-dashboard.netlify.app/" class="btn">Live Demo</a>
+                                        <a href="https://vee-ecommerce-dashboard.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Live Demo
+                                        </a>
+                                        <a href="https://github.com/veedahv/ecommerce-dashboard" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Repo Link
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -360,18 +389,25 @@
                                 <div class="h-100">
                                     <img src="./images/weather-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
-                                        <h3 class="card-title p-1">Weather App</h3>
+                                        <h3 class="card-title p-1">Weather Forecast App</h3>
                                         <!-- <p class="card-text">
                                             I made use of api in this site.
                                         </p> -->
-                                        <a href="https://veedahv-weather-app.netlify.app/" class="btn">Live Demo</a>
+                                        <a href="https://veedahv-weather-app.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Live Demo
+                                        </a>
+                                        <a href="https://github.com/veedahv/weather-app" target="_blank" rel="noopener noreferrer" class="btn">
+                                            <i class="fa fa-link" aria-hidden="true"></i> Repo Link
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="project-grid-card">
                                 <div class="">
                                     <div class=" text-center">
-                                        <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="mx-auto blue-link">Check out my Github profile</a>
+                                        <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="mx-auto blue-link">
+                                            Check out my Github profile
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -509,6 +545,7 @@
             </div>
         </div>
     </footer>
+</div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
