--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                     More about me
                                 </h2>
                                 <p class="card-text">
-                                    My name is Victoria David Akpan. I am an indigene of Akwa Ibom State.
+                                    My name is Victoria David Akpan. I am Nigerian.
                                     I am a front-end web developer who replicates designs using 
                                     the appropriate front-end techniques.
                                     <!-- I am an undergraduate student of Computer Engineering at the University of Uyo.
@@ -326,7 +326,7 @@
                         <div class="project-grid">
                             <div class="project-grid-card">
                                 <div>
-                                    <small class="section-intro">MY PROJECTS</small>
+                                    <small class="section-intro">PROJECTS</small>
                                     <h2 class="headings">
                                         Completed Projects
                                     </h2>
@@ -337,6 +337,7 @@
                                 <div class="h-100">
                                     <img src="./images/hotel-booking.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
+                                    <div class="w-100">
                                         <h3 class="card-title">Hotel Booking Site</h3>
                                         <!-- <p class="card-text">
                                             I created a hotel booking app using just html and css.
@@ -348,12 +349,14 @@
                                             <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                         </a>
                                     </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="project-grid-card project-card">
                                 <div class="">
                                     <img src="./images/budget-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
+                                    <div class="w-100">
                                         <h3 class="card-title">Shopping List App</h3>
                                         <!-- <p class="card-text">
                                             I created a shopping list budget app using html, css and js.
@@ -365,12 +368,14 @@
                                             <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                         </a>
                                     </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="project-grid-card project-card">
                                 <div class="h-100">
                                     <img src="./images/veeshop-dashboard.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
+                                    <div class="w-100">
                                         <h3 class="card-title p-1">Ecommerce Dashboard</h3>
                                         <!-- <p class="card-text">
                                             I implemented a dashboard using html, css, bootstrap and js.
@@ -383,12 +388,14 @@
                                             <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                         </a>
                                     </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="project-grid-card project-card">
                                 <div class="h-100">
                                     <img src="./images/weather-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
+                                    <div class="w-100">
                                         <h3 class="card-title p-1">Weather Forecast App</h3>
                                         <!-- <p class="card-text">
                                             I made use of api in this site.
@@ -399,6 +406,7 @@
                                         <a href="https://github.com/veedahv/weather-app" target="_blank" rel="noopener noreferrer" class="btn">
                                             <i class="fa fa-link" aria-hidden="true"></i> Repo Link
                                         </a>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
@@ -421,7 +429,7 @@
                 <div class="contact-info ">
                     <div class="grid contact-info-grid">
                         <div class="contact-info">
-                            <img src="./images/about-me.jpg" class="w-100 h-100" alt="">
+                            <img src="./images/me.jpg" class="w-100 h-100" alt="">
                             <!-- <div class="contact-grid text-center">
                                 <div class="card">
                                     <div class="card-body">
@@ -447,7 +455,7 @@
                             </div> -->
                         </div>
                         <div class="">
-                            <h1>Contact Me</h1>
+                            <!-- <h1>Contact Me</h1> -->
                             <div class="my">                                 
                                 <p>Have an idea you want to bring to life?</p>
                                 <p>Or you want to say hi?</p>
@@ -458,13 +466,14 @@
                                     <label class="input-label" for="name" class="w-100">
                                         <i class="fa fa-user" aria-hidden="true"></i>
                                     </label>
-                                    <input type="text" class="w-100" name="name" id="name" placeholder="Name">
+                                    <input type="text" class="w-100" name="name" id="name" placeholder="Name" required>
                                 </div>
                                 <div class="input-wrap">
                                     <label class="input-label" for="email" class="w-100">
                                             <i class="fa fa-envelope" aria-hidden="true"></i>
                                     </label>
-                                    <input type="email" class="w-100" name="email" id="email" placeholder="E-Mail">
+                                    <input type="email" class="w-100" name="email" id="email" placeholder="E-Mail" required>
+                                    <small class="error"></small>
                                 </div>
                                 <div class="input-wrap">
                                     <label class="input-label" for="subject" class="w-100">
@@ -476,7 +485,7 @@
                                     <label class="input-label" for="message" class="w-100">
                                             <i class="fa fa-comment" aria-hidden="true"></i>
                                     </label>
-                                    <textarea rows="5" class="w-100" name="message" id="message" placeholder="Message"></textarea>
+                                    <textarea rows="5" class="w-100" name="message" id="message" placeholder="Message" required></textarea>
                                 </div>
                                 <label for="submit" class="">
                                     <button type="submit" class="button btn">SEND MESSAGE</button>
@@ -506,7 +515,7 @@
                             <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="">
                                 <i class="fa fa-github" aria-hidden="true"></i>
                             </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer" class="">
+                            <a href="http://wa.me/2347087040050?text=Hi,%20I'm%20interested%20in%20your%20services" target="_blank" rel="noopener noreferrer" class="">
                                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
                             </a>
                             <a href="https://www.instagram.com/mhvee__e/" target="_blank" rel="noopener noreferrer"
@@ -540,7 +549,7 @@
                 </div> -->
                 <!-- https://www.flaticon.com/search?word=team&author_id=190 -->
                 <p class="text-center">
-                    &#169; <a class="brand" href="index.html">Veedah</a> || 2020
+                    &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a> || 2020
                 </p>
             </div>
         </div>
