--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="css/portfolio.css">
     <title>Victoria Akpan</title>
 </head>
@@ -141,8 +144,6 @@
                                         My name is Victoria David Akpan. I am Nigerian.
                                         I am a front-end web developer who replicates designs using
                                         the appropriate front-end techniques.
-                                        <!-- I am an undergraduate student of Computer Engineering at the University of Uyo.
-                                    I am currently in my third year. I started coding 6 months ago. -->
                                     </p>
                                     <p class="card-text">
                                         Currently, I am studying Computer
@@ -153,8 +154,6 @@
                                         While not coding or learning, I enjoy watching movies, playing
                                         games, reading good books, experimenting with baking ingredients,
                                         and also spending time with friends and family.
-                                        <!-- Whenever I am stressed out, I spend my time cooking,
-                                    baking, eating and painting my nails to relieve the stress. -->
                                     </p>
                                 </div>
                             </div>
@@ -162,21 +161,16 @@
                                 <div class="skill-card-contain flex">
                                     <div class="about-card-skill">
                                         <div class="about-page-card">
-                                            <!-- <h2 class="skill-card-text">Soft skills</h2> -->
-                                            <!-- <p class="skill-card-text">Team work</p> -->
                                             <img src="./images/web-research.svg" class="skill-card-text" alt="">
                                         </div>
                                         <div class="about-page-card">
                                             <img src="./images/community.svg" class="skill-card-text" alt="">
-                                            <!-- <p class="skill-card-text">Team work</p> -->
                                         </div>
                                         <div class="about-page-card">
                                             <img src="./images/streaming.svg" class="skill-card-text" alt="">
-                                            <!-- <p class="skill-card-text">Team work</p> -->
                                         </div>
                                         <div class="about-page-card">
                                             <img src="./images/personal-development.svg" class="skill-card-text" alt="">
-                                            <!-- <p class="skill-card-text">Team work</p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -326,11 +320,6 @@
             </section>
             <section class="project-page" id="project-page">
                 <div class="container py-5">
-                    <!-- <div>
-                    <h2 class="grid headings">
-                        Completed Projects
-                    </h2>
-                </div> -->
                     <div>
                         <div>
                             <div class="project-grid">
@@ -349,9 +338,6 @@
                                         <div class="card-details w-100">
                                             <div class="w-100">
                                                 <h3 class="card-title">Hotel Booking Site</h3>
-                                                <!-- <p class="card-text">
-                                            I created a hotel booking app using just html and css.
-                                        </p> -->
                                                 <a href="https://best-tour-site.netlify.app/" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
@@ -367,12 +353,9 @@
                                 <div class="project-grid-card project-card">
                                     <div class="">
                                         <img src="./images/budget-app.jpg" class="h-100 w-100" alt="...">
-                                        <div class="card-details w-100">
+                                        <div class="card-details w-100 h-100">
                                             <div class="w-100">
                                                 <h3 class="card-title">Shopping List App</h3>
-                                                <!-- <p class="card-text">
-                                            I created a shopping list budget app using html, css and js.
-                                        </p> -->
                                                 <a href="https://shopping-list-budget.netlify.app/" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
@@ -391,10 +374,6 @@
                                         <div class="card-details w-100">
                                             <div class="w-100">
                                                 <h3 class="card-title p-1">Ecommerce Dashboard</h3>
-                                                <!-- <p class="card-text">
-                                            I implemented a dashboard using html, css, bootstrap and js.
-                                            In this project, I made us of local stoeage to store variables.
-                                        </p> -->
                                                 <a href="https://vee-ecommerce-dashboard.netlify.app/" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
@@ -413,9 +392,6 @@
                                         <div class="card-details w-100">
                                             <div class="w-100">
                                                 <h3 class="card-title p-1">Weather Forecast App</h3>
-                                                <!-- <p class="card-text">
-                                            I made use of api in this site.
-                                        </p> -->
                                                 <a href="https://veedahv-weather-app.netlify.app/" target="_blank"
                                                     rel="noopener noreferrer" class="btn">
                                                     <i class="fa fa-link" aria-hidden="true"></i> Live Demo
@@ -449,38 +425,14 @@
                         <div class="grid contact-info-grid">
                             <div class="contact-info">
                                 <img src="./images/me.jpg" class="w-100 h-100" alt="">
-                                <!-- <div class="contact-grid text-center">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <i class="fa mb-2 fa-2x fa-envelope-o" aria-hidden="true"></i>
-                                        <h3 class="contact-text">Email</h3>
-                                        <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-body">
-                                        <i class="fa mb-2 fa-2x fa-mobile" aria-hidden="true"></i>
-                                        <h3 class="contact-text">Phone</h3>
-                                        <a href="tel:+23470870050">+23470870050</a>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-body">
-                                        <i class="fa mb-2 fa-2x fa-map-marker" aria-hidden="true"></i>
-                                        <h3 class="contact-text">Address</h3>
-                                        <p class="contact-text-address">Uyo, Akwa Ibom</p>
-                                    </div>
-                                </div>
-                            </div> -->
                             </div>
                             <div class="">
-                                <!-- <h1>Contact Me</h1> -->
                                 <div class="my">
                                     <p>Have an idea you want to bring to life?</p>
                                     <p>Or you want to say hi?</p>
                                     <p>Why not send me a message?</p>
                                 </div>
-                                <form action="post" class="text-center">
+                                <form class="text-center">
                                     <div class="input-wrap">
                                         <label class="input-label" for="name" class="w-100">
                                             <i class="fa fa-user" aria-hidden="true"></i>
@@ -566,12 +518,6 @@
                     <div class="attribution">
                         Icons from <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>
                     </div>
-                    <!-- <div class="attribution">
-                    Icons made by
-                    <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from
-                    <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-                </div> -->
-                    <!-- https://www.flaticon.com/search?word=team&author_id=190 -->
                     <p class="text-center">
                         &#169; <a class="brand" href="index.html">Vee<span class="logo-blue">dah</span></a> || 2020
                     </p>
@@ -584,24 +530,6 @@
         AOS.init();
     </script>
     <script src="js/script.js"></script>
-    <!-- <script>
-        (function() {
-  'use strict';
-
-  let section = document.querySelectorAll('section');
-  let sections = {};
-  let i = 0;
-
-  Array.prototype.forEach.call(section, function(e) {
-    sections[e.id] = e.offsetTop;
-  });
-
-  window.onscroll = function() {
-    let scrollPosition = document.documentElement.scrollTop || document.body.scrollTop;
-  };
-})();
-
-    </script> -->
 </body>
 
 </html>
